--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,9 @@ marimo/_lsp/
 __marimo__/
 
 mp3/
+
+# Telemetry database files
+telemetry.db
+telemetry.db-journal
+telemetry.db-shm
+telemetry.db-wal
